components/todo/App.module.scss
.todo {
  display: flex;
  flex-direction: column;
  max-width: 500px;
  margin: 5px auto;
  border: 1px solid lightgray;
  font-size: 14px;
  background: #ffffff;
  border-radius: 5px;
  margin: 5px;

  &__instruction {
    position: fixed;
    left: 0;
    top: 0;
    width: 100vw;
    height: 100vh;
    display: flex;
    justify-content: center;
    background: rgba(0, 0, 0, 0.9);

    &-container {
      max-width: 300px;
      width: 100%;
      height: 100%;
      display: flex;
      flex-direction: column;
      justify-content: center;

      & > ._text {
        color: #ffffff;
        font-size: 18px;
        
        &:not(:last-child) {
          margin-bottom: 10px;
        }
      }

      button {
        margin-top: 20px;
      }
    }
  }
}

